Databasechanged from userauth to movieReviewDB
please export these tow files

userauth.reviews.json
userauth.users.json

into the newly created database
files are given and all the passwords for these files are 1234 for any mailid

--- a/public/styles/movie_details_styles.css
+++ b/public/styles/movie_details_styles.css
@@ -22,6 +22,24 @@ body {
   padding-top: 80px;
 }
 
+.review-box {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 60%;
+  margin : 0 auto;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+
+.review-content {
+  font-size: 16px;
+/* This will center align the element */
+}
+
+
+
 .header {
   position: fixed;
   top: 0;
