--- a/views/movie-info.ejs
+++ b/views/movie-info.ejs
@@ -47,6 +47,7 @@
         </div>
         <!-- <div id="trailer-container"></div>  -->
       </div>
+      <div class ="cast-details"></div>
     </div>
 
     <div class="given_reviews">
