--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,10 @@
     <a href="/index" class="logo">CineSurf</a>
 
     <nav class="navbar">
-      <a href="#">Popular</a>
-      <a href="#">Movies</a>
-      <a href="#">TV Shows</a>
+      <a href="#" id="popular">Popular</a>
+      <a href="#" id="movies">Movies</a>
+      <a href="#" id="tvshows">TV Shows</a>
+      
       <form id="form">
         <i class="fa fa-search"></i>
         <input type="search" placeholder="Search here..." id="query">
@@ -73,7 +74,7 @@
   </main>
 
 
-  <script src="/scripts/index.js"></script>
+  <script src ="/scripts/index.js"></script>
 </body>
 
 </html>
