--- a/views/tv-shows-info.ejs
+++ b/views/tv-shows-info.ejs
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Details</title>
+    <title>TV Show Details</title>
     <link rel="stylesheet" href="/styles/movie_details_styles.css" />
     <!-- Link to the movie details stylesheet -->
     <style>
       body {
         background-color: #00000096;
       }
-      
     </style>
   </head>
   <body>
@@ -39,8 +38,8 @@
     <div class="movie-details-container">
       <div class="movie-details-info">
         <div class="movie-poster-trailer">
-          <img src="" alt="Movie Poster" id="movie-poster" />
-          <div class="overview" id="movie-overview">
+          <img src="" alt="TV Show Poster" id="tv-show-poster" />
+          <div class="overview" id="tv-show-overview">
             <h3>Overview</h3>
             <p>Placeholder text for overview</p>
           </div>
@@ -68,7 +67,10 @@
       <button id="submitReviewButton" class="reviews-button">Submit</button>
     </div>
     <!-- Include the app.js file -->
-    <footer> 
+    <script src="/scripts/movie_info.js">
+      
+    </script>
+    <footer>
       <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -117,10 +119,6 @@
 </body>
 </html>
 
-
     </footer>
-    <script src="/scripts/movie_info.js">
-      
-    </script>
   </body>
 </html>
