--- a/views/movie-info.ejs
+++ b/views/movie-info.ejs
@@ -45,7 +45,7 @@
             <p>Placeholder text for overview</p>
           </div>
         </div>
-        <!-- <div id="trailer-container"></div>  -->
+        <div id="trailer-container"></div> 
       </div>
       <div class ="cast-details"></div>
     </div>
