--- a/public/styles/movie_details_styles.css
+++ b/public/styles/movie_details_styles.css
@@ -177,6 +177,7 @@ body {
   height: auto;
   border-radius: 8px; /* Add border-radius for rounded corners */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
+  margin-right: 30px;
 }
 
 #trailer-container {
