--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
             </div>
             <div class="login-container">
                 <h2>Login</h2>
-                <form class="login-form" action="/login" method="POST">
+                <form class41+54784875795789+8="login-form" action="/login" method="POST">
                     <div class="form-group">
                         <label for="email">Email address:</label>
                         <input type="email" name="email" id="email" class="form-control" required>
