--- a/public/styles/movie_details_styles.css
+++ b/public/styles/movie_details_styles.css
@@ -260,7 +260,7 @@ body {
   color: white;
   display: none;
   position: absolute;
-  background-color: #000000;
+  background-color: #7e3b3b48;
   min-width: 200px;
   box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2);
   z-index: 1;
