--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,6 @@
 
   <main id="main">
     <div class="movie">
-      <img src="/images/blackpanther.jpg" alt="image">
 
       <div class="movie-info">
         <h3>Movie Title</h3>
@@ -66,9 +65,7 @@
 
       <div class="overview">
         <h3>overview</h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum similique officiis nam numquam molestias.
-        Incidunt et suscipit, inventore nemo perferendis omnis dolorum tenetur nam vel, mollitia itaque iusto asperiores
-        ipsam?
+        
       </div>
     </div>
   </main>
@@ -93,19 +90,10 @@
             <div class="footer-col">
                 <h4>About CineSurf</h4>
                 <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Explore</h4>
-                <ul>
-                    <li><a href="#">Movies</a></li>
-                    <li><a href="#">TV Shows</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">News</a></li>
+                    <li><a href="#" id="about">About Us</a></li>
+                    <li><a href="#" id="Contact">Contact Us</a></li>
+                    <li><a href="#" id="PrivacyPolicies">Privacy Policy</a></li>
+                    <li><a href="#" id="terms">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="footer-col">
