--- a/views/main.ejs
+++ b/views/main.ejs
@@ -106,44 +106,38 @@
 </head>
 <body>
 
-  <footer class="footer">
-     <div class="container">
-        <div class="row">
-            <div class="footer-col">
-                <h4>About CineSurf</h4>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Explore</h4>
-                <ul>
-                    <li><a href="#">Movies</a></li>
-                    <li><a href="#">TV Shows</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">News</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>
+    <footer class="footer">
+        <div class="container">
+           <div class="row">
+               <div class="footer-col">
+                   <h4>About CineSurf</h4>
+                   <ul>
+                       <li><a href="#" id="about">About Us</a></li>
+                       <li><a href="#" id="Contact">Contact Us</a></li>
+                       <li><a href="#" id="PrivacyPolicies">Privacy Policy</a></li>
+                       <li><a href="#" id="terms">Terms of Service</a></li>
+                   </ul>
+               </div>
+               <div class="footer-col">
+                   <h4>Follow Us</h4>
+                   <div class="social-links">
+                       <a href="#"><i class="fab fa-facebook-f"></i></a>
+                       <a href="#"><i class="fab fa-twitter"></i></a>
+                       <a href="#"><i class="fab fa-instagram"></i></a>
+                       <a href="#"><i class="fab fa-youtube"></i></a>
+                   </div>
+               </div>
+           </div>
         </div>
-     </div>
-  </footer>
-
-</body>
-</html>
-
-    </footer>
+     </footer>
+   
+   </body>
+   </html>
+   
+   
+   
+   
+       </footer>
 </body>
 
 </html>
