--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,16 +25,24 @@
         <h2>Meet the Team</h2>
         <div class="team">
             <div class="team-member">
-                <h3>John Doe</h3>
-                <p>Founder & CEO</p>
+                <h3>Perishetty Satya Amrutha Raja</h3>
+                
             </div>
             <div class="team-member">
-                <h3>Jane Smith</h3>
-                <p>Head of Content</p>
+                <h3>Kache Nivas</h3>
+                
             </div>
             <div class="team-member">
-                <h3>Mike Johnson</h3>
-                <p>Lead Developer</p>
+                <h3>Srinath Krishna Kumar</h3>
+                
+            </div>
+            <div class="team-member">
+                <h3>Esa Abhishek</h3>
+                
+            </div>
+            <div class="team-member">
+                <h3>Surapuchetty Abhilash</h3>
+                
             </div>
         </div>
     </section>
