--- a/views/tv-shows-info.ejs
+++ b/views/tv-shows-info.ejs
@@ -235,7 +235,7 @@
            <div class="footer-col">
                <h4>About CineSurf</h4>
                <ul>
-                   <li><a href="#" id="about">About Us</a></li>
+                   <li><a href="\about" id="about">About Us</a></li>
                    <li><a href="#" id="Contact">Contact Us</a></li>
                    <li><a href="#" id="PrivacyPolicies">Privacy Policy</a></li>
                    <li><a href="#" id="terms">Terms of Service</a></li>
