--- a/views/theater.ejs
+++ b/views/theater.ejs
@@ -131,7 +131,7 @@
 
   
 
-  <!--<script>
+  <script>
     document.getElementById('toggle-form').addEventListener('click', function() {
       var formContainer = document.getElementById('add-theater-form');
       formContainer.classList.toggle('show');
@@ -141,7 +141,7 @@
         formContainer.scrollIntoView({ behavior: 'smooth' });
       }
     });
-  </script>-->
+  </script>
 
 </body>
 </html>
